# movie_tracker

./: .gitignore  Cargo.toml
src/: db.rs  main.rs  tui.rs
src/db/: model.rs  schema.sql  utils.rs
src/tmdb/: client.rs  model.rs  utils.rs
src/tui/: details.rs  main_view.rs  popup.rs  results.rs  search.rs  title.rs  utils.rs
src/tui/main_view/: watch_list.rs
src/tui/popup/: add_movie.rs  confirm_movie.rs  confirm_series.rs  paginated_search.rs  warning.rs
src/tui/popup/paginated_search/: details.rs  results.rs  search.rs  search_type.rs
