[package]
name = "movie_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
derive_more = { version = "2.1.1", features = ["try_into"] }
directories = "6.0.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["blocking", "json", "query"] }
rusqlite = { version = "0.38.0", features = ["chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
textwrap = "0.16.2"
thiserror = "2.0.18"
